--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+  body{ background-color: #000000}
   @import url(./vendor/normalize.css);
   @import url(./vendor/fonts/fonts.css);
   @import url(./blocks/page/page.css);
